--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   cv_bridge
   image_transport
+  bringup
   )
   #find_package(OpenCV 3 REQUIRED)
   find_package(OpenCV 4 REQUIRED)
