--- a/package.xml
+++ b/package.xml
@@ -54,10 +54,11 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>image_transport</build_depend>
-  <build_depend>opencv2</build_depend>
+  <!-- <build_depend>opencv2</build_depend> -->
   <build_depend>image_geometry</build_depend>
-  <build_depend>opencv</build_depend> 
+  <!-- <build_depend>opencv</build_depend>  -->
   <build_depend>message_generation</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -65,9 +66,11 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_transport</exec_depend>
-  <exec_depend>opencv2</exec_depend>
+  <!-- <exec_depend>opencv2</exec_depend> -->
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  
 
   <exec_depend>message_runtime</exec_depend>
 
