--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>MG400_autocalib</name>
+  <name>MG400_basic</name>
   <version>0.0.0</version>
-  <description>The MG400_autocalib package</description>
+  <description>The MG400_basic package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
