--- a/package.xml
+++ b/package.xml
@@ -59,7 +59,8 @@
   <!-- <build_depend>opencv2</build_depend> -->
   <build_depend>image_geometry</build_depend>
   <!-- <build_depend>opencv</build_depend>  -->
-  <build_depend>message_generation</build_depend>
+  <build_depend>message_generation</build_depend> 
+  <build_depend>mg400_bringup</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>roscpp</exec_depend>
@@ -70,7 +71,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
-  
+  <exec_depend>mg400_bringup</exec_depend>
 
   <exec_depend>message_runtime</exec_depend>
 
