--- a/package.xml
+++ b/package.xml
@@ -60,6 +60,7 @@
   <build_depend>image_geometry</build_depend>
   <!-- <build_depend>opencv</build_depend>  -->
   <build_depend>message_generation</build_depend>
+  <build_depend>camera_pkg_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>roscpp</exec_depend>
@@ -70,6 +71,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>camera_pkg_msgs</exec_depend>
   
 
   <exec_depend>message_runtime</exec_depend>
