--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,8 +156,8 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 
-add_executable(mg_work src/mg_work.cpp)
-target_link_libraries(mg_work ${OpenCV_LIBRARIES} ${catkin_LIBRARIES} )
+#add_executable(mg_work src/mg_work.cpp)
+#target_link_libraries(mg_work ${OpenCV_LIBRARIES} ${catkin_LIBRARIES} )
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
